--- a/1. Build a Passenger Counter App/22. Render a welcome message/index.html
+++ b/1. Build a Passenger Counter App/22. Render a welcome message/index.html
@@ -1,7 +1,7 @@
 <html>
     <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
     </head>
-    <body>
+    <body onload="welcome()">
         <p id="welcome-el"></p>
         <script src="index.js"></script>
     </body>
