Add a function to know the taste

--- a/1. Build a Passenger Counter App/29. Trying to do some functional thing/index.html
+++ b/1. Build a Passenger Counter App/29. Trying to do some functional thing/index.html
@@ -5,16 +5,18 @@
     <body>
         <h1>Pedidos de Din din:</h1>
         <h2 id="count-el">0</h2>
+
+        <button onclick="addTaste()">a</button>
         <form action="">
-            <select name="A" id="">
-                <option value="a">Paçoca</option>
-                <option value="b">Coco</option>
-                <option value="c">Nutella</option>
-                <option value="d">Amendoim</option>
+            <select name="gelinhos" id="elementos">
+                <option value="1">Paçoca</option>
+                <option value="2">Coco</option>
+                <option value="3">Nutella</option>
+                <!-- <option value="d">Amendoim</option>
                 <option value="e">Sensação</option>
                 <option value="f">Morango</option>
                 <option value="g">Maracujá</option>
-                <option value="h">Limão</option>
+                <option value="h">Limão</option> -->
             </select>
 
         </form>
