--- a/1. Build a Passenger Counter App/29. Trying to do some functional thing/index.html
+++ b/1. Build a Passenger Counter App/29. Trying to do some functional thing/index.html
@@ -13,6 +13,7 @@
 
         <form>
             <select name="gelinhos" id="elementos" onchange="chooseTaste()">
+                <option value="0" selected="selected">Selecione um sabor</option>
                 <option value="1">Paçoca</option>
                 <option value="2">Coco</option>
                 <option value="3">Nutella</option>
