Create the decrement function and add CSS in it

--- a/1. Build a Passenger Counter App/29. Trying to do some functional thing/index.html
+++ b/1. Build a Passenger Counter App/29. Trying to do some functional thing/index.html
@@ -28,6 +28,7 @@
         
 
         
+        <button id="decrement-btn" onclick="decrement()">Retire</button>
         <button id="increment-btn" onclick="increment() ">Adicione</button>
         <button id="create-btn" onclick="clooseOrder()">Fechar Pedido</button>
         <button id="save-btn" onclick="save()">Salve</button>
