--- a/2. Practice time - part 1/2. Contatenate two strings in a function/index.html
+++ b/2. Practice time - part 1/2. Contatenate two strings in a function/index.html
@@ -2,6 +2,6 @@
     <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
         <script src="index.js"></script>
     </head>
-    <body onload="hello()">
+    <body onload="greetLinda()">
     </body>
 </html>
