--- a/2. Practice time - part 1/6. Calculator challenge/index.html
+++ b/2. Practice time - part 1/6. Calculator challenge/index.html
@@ -11,7 +11,10 @@
         <button onclick="divide()">Divide</button>
         <button onclick="multiply()">Multiply</button>
         <br>
-        <span id="sum-el">Sum: </span>
+        <p>
+            Sum: 
+            <span id="sum-el"></span>
+        </p>
         <script src="index.js"></script>
     </body>
 </html>
