Try to make the same pattern like tutorial

--- a/2. Practice time - part 1/6. Calculator challenge/index.html
+++ b/2. Practice time - part 1/6. Calculator challenge/index.html
@@ -4,6 +4,7 @@
     </head>
     <body>
         <span id="num1-el"></span>
+        
         <span id="num2-el"></span>
         <br>
         <button onclick="add()">Add</button>
@@ -12,7 +13,7 @@
         <button onclick="multiply()">Multiply</button>
         <br>
         <p>
-            Sum: 
+            Result: 
             <span id="sum-el"></span>
         </p>
         <script src="index.js"></script>
